# bjj_coach

./: README.md  app.py  data_collector.ipynb  mistral7B.ipynb  pyproject.toml  requirements.txt  training.ipynb
danaherjohn/: 2022-03-24_00-07-06_UTC.txt  2022-03-26_04-51-01_UTC.txt  2022-03-27_20-47-34_UTC.txt  2022-03-28_20-57-50_UTC.txt  2022-03-29_20-43-34_UTC.txt  2022-03-30_21-14-49_UTC.txt  2022-04-01_21-07-31_UTC.txt  2022-04-02_21-54-48_UTC.txt  2022-04-03_20-51-28_UTC.txt  2022-04-05_20-56-18_UTC.txt  2022-04-06_21-09-15_UTC.txt  2022-04-07_21-36-36_UTC.txt  2022-04-08_22-22-01_UTC.txt  2022-04-09_21-41-16_UTC.txt  2022-04-10_21-59-31_UTC.txt  2022-04-13_21-11-24_UTC.txt  2022-04-14_21-39-02_UTC.txt  2022-04-15_21-13-42_UTC.txt  2022-04-17_21-06-03_UTC.txt  2022-04-18_21-48-12_UTC.txt  2022-04-19_11-38-14_UTC.txt  2022-04-27_14-08-55_UTC.txt  2022-04-28_13-27-22_UTC.txt  2022-04-29_15-38-27_UTC.txt  2022-04-30_17-20-27_UTC.txt  2022-05-03_22-15-10_UTC.txt  2022-05-04_21-03-57_UTC.txt  2022-05-06_00-25-57_UTC.txt  2022-05-07_20-59-44_UTC.txt  2022-05-08_21-12-55_UTC.txt  2022-05-10_21-27-59_UTC.txt  2022-05-11_21-54-54_UTC.txt  2022-05-13_21-28-48_UTC.txt  2022-05-17_07-43-08_UTC.txt  2022-05-18_14-03-56_UTC.txt  2022-05-20_23-09-01_UTC.txt  2022-05-24_21-29-32_UTC.txt  2022-05-27_21-37-52_UTC.txt  2022-05-30_21-24-51_UTC.txt  2022-06-04_21-03-17_UTC.txt  (+306 more)
data/: danaher_data.csv
data/danaherjohn/: 2022-03-24_23-25-36_UTC.txt  2022-03-31_21-22-42_UTC.txt  2022-04-03_12-11-48_UTC.txt  2022-04-04_20-47-16_UTC.txt  (+257 more)
notebooks/: data_collector.ipynb  training.ipynb
